- facebook login implemented - session handling and navigating implemented

--- a/RSSReader/Profile.storyboard
+++ b/RSSReader/Profile.storyboard
@@ -17,19 +17,89 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ea-VV-Csy" customClass="FacebookLoginButtonView" customModule="RSSReader" customModuleProvider="target">
-                                <rect key="frame" x="62" y="597" width="250" height="50"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ojv-6y-fAq">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ea-VV-Csy" customClass="FacebookLoginButtonView" customModule="RSSReader" customModuleProvider="target">
+                                        <rect key="frame" x="62" y="608" width="250" height="50"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="9aW-Ni-qvE"/>
+                                            <constraint firstAttribute="width" constant="250" id="Qlf-y8-6ZO"/>
+                                        </constraints>
+                                    </view>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7zo-nR-r1P">
+                                        <rect key="frame" x="0.0" y="58.5" width="375" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="kPq-0k-bsf"/>
+                                        </constraints>
+                                        <connections>
+                                            <segue destination="4Xx-IO-Kgu" kind="embed" id="H9f-O4-0vY"/>
+                                        </connections>
+                                    </containerView>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mIo-pR-X0E">
+                                        <rect key="frame" x="0.0" y="383" width="375" height="175"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="175" id="qcl-Bw-kGr"/>
+                                        </constraints>
+                                        <connections>
+                                            <segue destination="HS1-Uh-E2P" kind="embed" id="9cU-AK-WeM"/>
+                                        </connections>
+                                    </containerView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Find new feeds" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m2d-XR-4qX">
+                                        <rect key="frame" x="8" y="308.5" width="116" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PHa-7c-bbo">
+                                        <rect key="frame" x="8" y="341" width="359" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Your RSS feed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vql-fS-a3h">
+                                        <rect key="frame" x="8" y="30" width="109.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="9aW-Ni-qvE"/>
-                                    <constraint firstAttribute="width" constant="250" id="Qlf-y8-6ZO"/>
+                                    <constraint firstAttribute="bottom" secondItem="2Ea-VV-Csy" secondAttribute="bottom" constant="30" id="4rB-lc-qpR"/>
+                                    <constraint firstItem="vql-fS-a3h" firstAttribute="top" secondItem="ojv-6y-fAq" secondAttribute="top" constant="30" id="54X-gI-WqY"/>
+                                    <constraint firstItem="PHa-7c-bbo" firstAttribute="leading" secondItem="ojv-6y-fAq" secondAttribute="leading" constant="8" id="6eY-tj-dz5"/>
+                                    <constraint firstAttribute="trailing" secondItem="7zo-nR-r1P" secondAttribute="trailing" id="Cyc-7f-tK3"/>
+                                    <constraint firstItem="m2d-XR-4qX" firstAttribute="top" secondItem="7zo-nR-r1P" secondAttribute="bottom" constant="50" id="KNC-1N-5oZ"/>
+                                    <constraint firstItem="2Ea-VV-Csy" firstAttribute="top" secondItem="mIo-pR-X0E" secondAttribute="bottom" constant="50" id="LVT-d6-P0U"/>
+                                    <constraint firstItem="vql-fS-a3h" firstAttribute="leading" secondItem="ojv-6y-fAq" secondAttribute="leading" constant="8" id="SVH-7o-ng9"/>
+                                    <constraint firstAttribute="trailing" secondItem="PHa-7c-bbo" secondAttribute="trailing" constant="8" id="T9Y-oW-Qu4"/>
+                                    <constraint firstAttribute="trailing" secondItem="mIo-pR-X0E" secondAttribute="trailing" id="eaY-qv-mn4"/>
+                                    <constraint firstItem="2Ea-VV-Csy" firstAttribute="centerX" secondItem="ojv-6y-fAq" secondAttribute="centerX" id="f8i-1B-la7"/>
+                                    <constraint firstItem="7zo-nR-r1P" firstAttribute="top" secondItem="vql-fS-a3h" secondAttribute="bottom" constant="8" id="flL-ms-dsi"/>
+                                    <constraint firstItem="m2d-XR-4qX" firstAttribute="leading" secondItem="ojv-6y-fAq" secondAttribute="leading" constant="8" id="hti-ou-Yxf"/>
+                                    <constraint firstItem="7zo-nR-r1P" firstAttribute="top" secondItem="vql-fS-a3h" secondAttribute="bottom" constant="8" id="keA-UW-XZL"/>
+                                    <constraint firstItem="mIo-pR-X0E" firstAttribute="leading" secondItem="ojv-6y-fAq" secondAttribute="leading" id="nhe-Mf-tbb"/>
+                                    <constraint firstItem="7zo-nR-r1P" firstAttribute="top" secondItem="ojv-6y-fAq" secondAttribute="top" constant="50" id="reJ-Cy-w4f"/>
+                                    <constraint firstItem="mIo-pR-X0E" firstAttribute="top" secondItem="PHa-7c-bbo" secondAttribute="bottom" constant="12" id="upC-RB-Eel"/>
+                                    <constraint firstItem="PHa-7c-bbo" firstAttribute="top" secondItem="m2d-XR-4qX" secondAttribute="bottom" constant="12" id="v9Y-b6-ehk"/>
+                                    <constraint firstItem="7zo-nR-r1P" firstAttribute="leading" secondItem="ojv-6y-fAq" secondAttribute="leading" id="yiV-kF-Z0Q"/>
                                 </constraints>
-                            </view>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="flL-ms-dsi"/>
+                                        <exclude reference="reJ-Cy-w4f"/>
+                                    </mask>
+                                </variation>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="OXX-fI-1Nq" firstAttribute="top" secondItem="2Ea-VV-Csy" secondAttribute="bottom" constant="20" id="l2t-zQ-ldb"/>
-                            <constraint firstItem="2Ea-VV-Csy" firstAttribute="centerX" secondItem="WMk-OH-6pr" secondAttribute="centerX" id="tV2-za-vtT"/>
+                            <constraint firstItem="OXX-fI-1Nq" firstAttribute="top" secondItem="ojv-6y-fAq" secondAttribute="bottom" id="9uf-xy-DSA"/>
+                            <constraint firstItem="ojv-6y-fAq" firstAttribute="top" secondItem="WMk-OH-6pr" secondAttribute="top" id="Koi-qp-e4Q"/>
+                            <constraint firstItem="mIo-pR-X0E" firstAttribute="width" secondItem="WMk-OH-6pr" secondAttribute="width" id="UxR-ky-HWo"/>
+                            <constraint firstItem="7zo-nR-r1P" firstAttribute="width" secondItem="WMk-OH-6pr" secondAttribute="width" id="c92-6m-sNW"/>
+                            <constraint firstItem="ojv-6y-fAq" firstAttribute="leading" secondItem="WMk-OH-6pr" secondAttribute="leading" id="rsN-jy-lva"/>
+                            <constraint firstAttribute="trailing" secondItem="ojv-6y-fAq" secondAttribute="trailing" id="xok-29-qnA"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
@@ -37,6 +107,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2p8-XL-Vmf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="595.5" y="366.5"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="U3t-GG-6uJ">
+            <objects>
+                <tableViewController id="4Xx-IO-Kgu" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="XDN-rY-M6F">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Ka3-M1-PzF">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ka3-M1-PzF" id="nYm-Ub-Gjz">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="4Xx-IO-Kgu" id="xXV-KN-rpj"/>
+                            <outlet property="delegate" destination="4Xx-IO-Kgu" id="6N0-xr-KBY"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IzE-RT-GEc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1084.5" y="239"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="UNs-5G-c17">
+            <objects>
+                <tableViewController id="HS1-Uh-E2P" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Juk-Z3-0lg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="175"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="McK-gA-lgC">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="McK-gA-lgC" id="knz-I8-LZn">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="HS1-Uh-E2P" id="ZRs-CW-ZCW"/>
+                            <outlet property="delegate" destination="HS1-Uh-E2P" id="5AO-5Q-x6b"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BD0-Cy-kIu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1084.5" y="526.5"/>
         </scene>
     </scenes>
 </document>
